refactor : 마이페이지 dto 감싸는 방식 수정